# gausspy

./: pyproject.toml
src/gausspy/: __init__.py
src/gausspy/tests/: test_examples.py
